# emgb

./: CMakeLists.txt  README.md  imgui.ini
.github/: FUNDING.yml
cmake/: CheckIncludes.cmake
include/: GB.h  cpu.h  cpu.hpp  gpu.h  gpu.hpp  interrupt.hpp  interupt.h  io.h  joypad.h  joypad.hpp  memory.h  memory.hpp  rom.h  rom.hpp  timer.h  utils.h
src/: background.c  background.cpp  cb.c  cb.cpp  cpu.c  cpu.cpp  debug.c  debug.cpp  gb.c  gpu.c  gpu.cpp  init.c  interupt.c  interupt.cpp  io.c  io.cpp  joypad.c  joypad.cpp  ld.c  ld.cpp  main.c  main.cpp  memory.c  memory.cpp  rom.c  rom.cpp  seeu.c  timer.cpp
src/cpu/: adc.cpp  add.cpp  and.cpp  cpu.cpp  ctrl.cpp  dec.cpp  inc.cpp  jmp.cpp  ld.cpp  rotate.cpp  rst.cpp  sbc.cpp  stack.cpp  sub.cpp
test/: CMakeLists.txt  cpu-test.cpp  interrupt-test.cpp  jmp-test.cpp  memory-test.cpp  test.hpp
